<resources>
    <string name="app_name">Planner</string>
    <string name="time_string">%1$d:%2$d</string>
    <string name="date_string">%3$d-%2$d-%1$d</string>
    <string name="save_event">Save Event</string>
    <string name="all_day">Весь день</string>
    <string name="enter_name_hint">Введите название</string>
    <string name="default_group_name">Входящие</string>
    <string name="channel_def_notify_name">Напоминания</string>
    <string name="channel_def_notify_description">Любые уведомления о событиях</string>
    <string name="dialog_format_time">%1$s\n%2$s</string>
    <string name="format_date_time">%1$s\n%2$s</string>
    <string name="add_event">Добавить событие</string>
    <string name="cd_logo_of_group">Logo of group</string>
    <string name="todo">TODO</string>
    <string name="cd_picture_of_event">Picture of event</string>
    <string name="cd_logo_my_day_top">Logo my day top</string>
    <string name="cd_my_day_click_logo">My day click logo</string>
    <string name="tmp_all_day">ВЕСЬ ДЕНЬ</string>
    <string name="cd_remind_of_event">Напомнить о событии</string>
    <string name="cd_repeat_settings">Настройки повтора</string>
    <string name="submit_button">Submit button</string>
    <string name="mess_add_success_event">Событие успешно создано</string>
    <string name="sing_in_with_google">Sing In with Google</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="tomorrow">Завтра</string>
    <string name="log_in">Войти</string>
    <string name="enter_group_name">Введите название</string>
    <string name="create_group">Создать группу</string>
    <string name="notify_interval_5min">5 минут</string>
    <string name="notify_interval_15min">15 минут</string>
    <string name="notify_interval_30min">30 минут</string>
    <string name="notify_interval_1hour">1 час</string>
    <string name="notify_interval_3hour">3 часа</string>
    <string name="notify_interval_1day">1 день</string>
    <string name="repeat_every_day">каждый день</string>
    <string name="repeat_every_week">каждую неделю</string>
    <string name="repeat_every_month">каждый месяц</string>
    <string name="repeat_every_year">каждый год</string>
    <string name="repeat_none">не повторять</string>
    <string name="repeat_each">повтор каждые</string>
    <string name="stop_after">остановить после</string>
    <string name="repeat_param_count">повторений</string>
</resources>
