<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notifyIntervalEvent5min"
            style="@style/notifyIntervalEvent"
            android:tag="5"
            android:text="@string/notify_interval_5min" />

        <TextView
            android:id="@+id/notifyIntervalEvent15min"
            style="@style/notifyIntervalEvent"
            android:tag="15"
            android:text="@string/notify_interval_15min" />

        <TextView
            android:id="@+id/notifyIntervalEvent30min"
            style="@style/notifyIntervalEvent"
            android:tag="30"
            android:text="@string/notify_interval_30min" />

        <TextView
            android:id="@+id/notifyIntervalEvent1hour"
            style="@style/notifyIntervalEvent"
            android:tag="60"
            android:text="@string/notify_interval_1hour" />

        <TextView
            android:id="@+id/notifyIntervalEvent3hour"
            style="@style/notifyIntervalEvent"
            android:tag="180"
            android:text="@string/notify_interval_3hour" />

        <TextView
            android:id="@+id/notifyIntervalEvent1day"
            style="@style/notifyIntervalEvent"
            android:tag="1440"
            android:text="@string/notify_interval_1day" />

    </LinearLayout>
</ScrollView>
