<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/textToTime"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:lines="2"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/tmp_all_day"
        android:textColor="@color/color_on_surface_emphasis_high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:alpha="?attr/emphasisDisabledAlpha"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/textToTime" />

    <ImageView
        android:id="@+id/reminder"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/cd_remind_of_event"
        android:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repeat"
        app:srcCompat="@drawable/ic_alarm_black_24dp" />

    <ImageView
        android:id="@+id/repeat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/cd_repeat_settings"
        android:tint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1"
        app:srcCompat="@drawable/ic_repeat_black_24dp" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="32dp"
        android:alpha="?attr/emphasisDisabledAlpha"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/repeat"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:tint="?attr/colorPrimary"
        android:contentDescription="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        app:srcCompat="@drawable/ic_1circle" />

    <TextView
        android:id="@+id/reminderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/reminder"
        app:layout_constraintStart_toStartOf="@id/reminder"
        app:layout_constraintTop_toBottomOf="@+id/reminder"
        tools:text="15 минут" />

</androidx.constraintlayout.widget.ConstraintLayout>
